--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,12 +5,13 @@
 <html>
     <head>
         <title>@title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/menu.css")" type="text/css" /><style>._css3m{display:none}</style>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/cfavicon.ico")">
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     </head>
-    <body style="height:95%; margin-left: 70px; margin-right: 50px; overflow:auto">
+    <body style="height:95%; margin-left:70px; margin-right:20px; overflow:auto">
         @content
     </body>
 </html>
